now it works AND its pretty

--- a/src/main/webapp/css/adminStyle.css
+++ b/src/main/webapp/css/adminStyle.css
@@ -12,6 +12,13 @@ body {
   font-style: normal;
 }
 
+@font-face {
+  font-family: 'advent_prosemibold';
+  src: url('./../fonts/adventpro-semibold-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
 h2 {
   font-family: 'strongarmbold_italic';
   padding-top: 50px;
@@ -19,10 +26,12 @@ h2 {
   font-size: 3rem;
   text-shadow: black 1px 0 1px;
 }
-
-#SubmitButton {
-  font-family: 'strongarmbold_italic';
+h5 {
+  font-family: 'advent_prosemibold';
   color: white;
-  font-size: 3rem;
-  text-shadow: black 2px 0 1px;
+}
+
+table {
+  color: black;
+  background-color: white;
 }
